Alterado configuração do h2
Modificado o datasouce do h2 de local para memoria para ver se sobe no heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,11 @@ server.port=8081
 ##Datasource
 ## -URL de acesso ao banco
 #spring.datasource.url=jdbc:h2:main:~/dio
-## -Usu·rio de acesso
+## -Usu√°rio de acesso
 #spring.datasource.username=sa
 ## -Senha de acesso
 #spring.datasource.password=
-## -Driver utilizado para conex„o
+## -Driver utilizado para conex√£o
 #spring.datasource.driver-class-name=org.h2.Driver
 #
 #spring.jpa.hibernate.ddl-auto = update
@@ -33,13 +33,14 @@ spring.h2.console.path=/h2
 
 # Datasource
 #spring.datasource.url=jdbc:h2:file://Users/rodolfogomes/Documents/live/dio
-#spring.datasource.url=jdbc:h2:file://Users/wagner.prado/Dropbox/curso/ProgramaÁ„o/Java Digital innovation/Santander java/SantanderDIO_ControleDePonto/SantanderDIO_ControleDePonto
-spring.datasource.url=jdbc:h2:file://C:/Documents and Settings/wagner.prado/Dropbox/curso/Progra~1/Java Digital innovation/Santander java/db/dbh2
+#spring.datasource.url=jdbc:h2:file://Users/wagner.prado/Dropbox/curso/Programa√ß√£o/Java Digital innovation/Santander java/SantanderDIO_ControleDePonto/SantanderDIO_ControleDePonto
+#spring.datasource.url=jdbc:h2:file://C:/Documents and Settings/wagner.prado/Dropbox/curso/Progra~1/Java Digital innovation/Santander java/db/dbh2
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql = true 
-  #pode colocar isso, quando tiver dando erro, n„o tiver inserindo ou
-  #com alguma inconsistÍncia
+  #pode colocar isso, quando tiver dando erro, n√£o tiver inserindo ou
+  #com alguma inconsist√™ncia
