--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,8 +34,8 @@ spring.h2.console.path=/h2
 # Datasource
 #spring.datasource.url=jdbc:h2:file://Users/rodolfogomes/Documents/live/dio
 #spring.datasource.url=jdbc:h2:file://Users/wagner.prado/Dropbox/curso/Programação/Java Digital innovation/Santander java/SantanderDIO_ControleDePonto/SantanderDIO_ControleDePonto
-spring.datasource.url=jdbc:h2:file://C:/Documents and Settings/wagner.prado/Dropbox/curso/Progra~1/Java Digital innovation/Santander java/db/dbh2
-#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file://C:/Documents and Settings/wagner.prado/Dropbox/curso/Progra~1/Java Digital innovation/Santander java/db/dbh2
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
